<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity"
    style="@style/background_button">


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        style="@style/background_navigation">

        <LinearLayout
            android:id="@+id/button_mainmenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back_to_main_menu">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_menu"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/credits"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/footer"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:layout_margin="15dp"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/textview_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/orange"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/textview_appname"
            android:src="@drawable/line"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:layout_below="@id/line"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/textview_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_profile"
            android:layout_below="@id/textview_name"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textview_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_number"
            android:textSize="18sp"
            android:layout_below="@id/textview_git"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey"/>

    </RelativeLayout>


</RelativeLayout>