<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity"
    style="@style/background_submenu">


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        style="@style/background_navigation">

        <LinearLayout
            android:id="@+id/button_mainmenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back_to_main_menu">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_menu"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/play"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/text_navigation">
        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_play"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/footer"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        style="@style/background_section"
        android:paddingVertical="15dp">

        <!-- Light 1 -->
        <ImageView
            android:id="@+id/light1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_light_off"
            android:layout_marginEnd="10dp"/>

        <!-- Light 2 -->
        <ImageView
            android:id="@+id/light2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_light_off"
            android:layout_marginEnd="10dp"/>

        <!-- Light 3 -->
        <ImageView
            android:id="@+id/light3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_light_off"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>


</RelativeLayout>